# firewalla-mcp

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: test.yml
docs/superpowers/plans/: 2026-07-18-msp-api-parity-0.4.0.md
docs/superpowers/specs/: 2026-07-18-firewalla-msp-api-parity-design.md
src/firewalla_mcp/: __init__.py  client.py  config.py  server.py
tests/: test_client_alarms.py  test_client_boxes_devices.py  test_client_core.py  test_client_flows_trends.py  test_client_rules.py  test_client_stats.py  test_client_target_lists.py  test_client_users_apps.py  test_config.py  test_server.py  test_version.py
