[project]
name = "firewalla-mcp"
version = "0.1.0"
description = "MCP server wrapping the Firewalla MSP API"
readme = "README.md"
authors = [
    { name = "djuntgen", email = "dev@juntgen.com" }
]
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.28.1",
    "mcp[cli]>=1.28.1",
]

[project.scripts]
firewalla-mcp = "firewalla_mcp.server:main"

[build-system]
requires = ["uv_build>=0.11.26,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=9.1.1",
    "respx>=0.23.1",
]
