[project]
name = "firewalla-mcp"
version = "0.5.1"
description = "MCP server wrapping the Firewalla MSP API"
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
authors = [
    { name = "djuntgen", email = "dev@juntgen.com" }
]
requires-python = ">=3.12"
keywords = ["mcp", "model-context-protocol", "firewalla", "claude", "llm"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: System :: Networking :: Firewalls",
]
dependencies = [
    "httpx>=0.28.1",
    "mcp[cli]>=1.28.1",
]

[project.urls]
Homepage = "https://github.com/djuntgen/firewalla-mcp"
Repository = "https://github.com/djuntgen/firewalla-mcp"
Issues = "https://github.com/djuntgen/firewalla-mcp/issues"
Changelog = "https://github.com/djuntgen/firewalla-mcp/blob/main/CHANGELOG.md"

[project.scripts]
firewalla-mcp = "firewalla_mcp.server:main"

[build-system]
requires = ["uv_build>=0.11.30,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=9.1.1",
    "respx>=0.23.1",
    "ruff>=0.15.21",
]
